<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/smoky"
    tools:context=".MainActivity">


    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <EditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/solar"
                android:ems="10"
                android:hint="@string/edt_name"
                android:textColor="@color/solar"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/edtType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/solar"
                android:ems="10"
                android:hint="@string/edt_type"
                android:textColor="@color/solar"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/edProvider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/solar"
                android:ems="10"
                android:hint="@string/edt_provider"
                android:textColor="@color/solar"
                android:textColorHint="@color/white" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Поиск/сортировка"
                android:textAlignment="center"
                android:textColor="@color/solar" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnByGroup"
                    android:layout_width="141dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/all"
                    android:textColor="@color/smoky"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/btnBySurname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/byType"
                    android:textColor="@color/smoky"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/btnByPhoneOrEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/byName"
                    android:textColor="@color/smoky"
                    android:textSize="12sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvDataAll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/solar" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>